--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-07  Igor Shevlyakov <igor@microunity.com>
+  
+	* combine.c (simplify_shift_const): Calculate rotate count
+	correctly for vector operands.
+
 2002-09-07  Ansgar Esztermann  <ansgar@thphy.uni-duesseldorf.de>
 
 	* c-typeck.c (c_tree_expr_nonnegative_p): New function.
