--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-09-07  Glen Nakamura  <glen@imodulo.com>
+
+	* sched-deps.c (sched_analyze_insn): Make sure to add insn
+	to reg_last->sets after flushing the dependency lists to guarantee
+	that subsequent clobbers will be dependent on it.
+
 2002-09-07  Igor Shevlyakov <igor@microunity.com>
   
 	* combine.c (simplify_shift_const): Calculate rotate count
