--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-07  Roger Sayle  <roger@eyesopen.com>
+
+	* basic-block.h (struct loop): Remove unused cont_dominator field.
+
 2002-09-07  Igor Shevlyakov <igor@microunity.com>
 
         * varasm.c (decode_rtx_const): Don't check undefined field for
