re PR target/7374 (__builtin_fabsl broken on alpha)
2002-09-07  Scott Snyder  <snyder@fnal.gov>

	PR target/7374
	* config/alpha/alpha.md (abstf2): Fix typo: 'neg' for 'abs'.

From-SVN: r56938

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-07  Scott Snyder  <snyder@fnal.gov>
+
+	PR target/7374
+	* config/alpha/alpha.md (abstf2): Fix typo: 'neg' for 'abs'.
+
 2002-09-07  Glen Nakamura  <glen@imodulo.com>
 
 	PR opt/7814
