--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-08  Alan Modra  <amodra@bigpond.net.au>
+
+	* reload.c (find_reloads <p constraint>): Pass operand_mode to
+	find_reloads_address.
+
 2002-09-08  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/h8300/h8300.md (udivmodqi4): Enable on H8/300.
