--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,13 @@
 2002-09-08  Alan Modra  <amodra@bigpond.net.au>
 
+	* varasm.c (default_assemble_visibility): Rename from
+	assemble_visibility.
+	* output.h: Here too.
+	* target-def.h (TARGET_ASM_ASSEMBLE_VISIBILITY): And here.
+	* config/rs6000/rs6000.c (rs6000_assemble_visibility): And here.
+
+2002-09-08  Alan Modra  <amodra@bigpond.net.au>
+
 	* reload.c (find_reloads <p constraint>): Pass operand_mode to
 	find_reloads_address.
 
