* config/arm/netbsd.h (INITIALIZE_TRAMPOLINE): Redefine. 	(CLEAR_INSN_CACHE): Define.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56954 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-08  Krister Walfridsson  <cato@df.lth.se>
+
+	* config/arm/netbsd.h (INITIALIZE_TRAMPOLINE): Redefine.
+	(CLEAR_INSN_CACHE): Define.
+
 2002-09-08  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* basic-block.h: Fix comment formatting.
