--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-09  Nick Clifton  <nickc@redhat.com>
+
+	* config/fr30/fr30.c (output.h): Move after inclusion of tree.h.
+	Fix folding marks.
+
 2002-09-09  Toshiyasu Morita  <toshiyasu.morita@hsa.hitachi.com>
             J"orn Rennecke <joern.rennecke@superh.com>
 
