--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -4845,7 +4845,7 @@
 
 (define_insn_and_split "*lea_general_1"
   [(set (match_operand 0 "register_operand" "=r")
-	(plus (plus (match_operand 1 "register_operand" "r")
+	(plus (plus (match_operand 1 "index_register_operand" "r")
 		    (match_operand 2 "register_operand" "r"))
 	      (match_operand 3 "immediate_operand" "i")))]
   "(GET_MODE (operands[0]) == QImode || GET_MODE (operands[0]) == HImode
@@ -4877,7 +4877,7 @@
 (define_insn_and_split "*lea_general_1_zext"
   [(set (match_operand:DI 0 "register_operand" "=r")
 	(zero_extend:DI
-	  (plus:SI (plus:SI (match_operand:SI 1 "register_operand" "r")
+	  (plus:SI (plus:SI (match_operand:SI 1 "index_register_operand" "r")
 			    (match_operand:SI 2 "register_operand" "r"))
 		   (match_operand:SI 3 "immediate_operand" "i"))))]
   "TARGET_64BIT"
@@ -4897,7 +4897,7 @@
 
 (define_insn_and_split "*lea_general_2"
   [(set (match_operand 0 "register_operand" "=r")
-	(plus (mult (match_operand 1 "register_operand" "r")
+	(plus (mult (match_operand 1 "index_register_operand" "r")
 		    (match_operand 2 "const248_operand" "i"))
 	      (match_operand 3 "nonmemory_operand" "ri")))]
   "(GET_MODE (operands[0]) == QImode || GET_MODE (operands[0]) == HImode
@@ -4927,7 +4927,7 @@
 (define_insn_and_split "*lea_general_2_zext"
   [(set (match_operand:DI 0 "register_operand" "=r")
 	(zero_extend:DI
-	  (plus:SI (mult:SI (match_operand:SI 1 "register_operand" "r")
+	  (plus:SI (mult:SI (match_operand:SI 1 "index_register_operand" "r")
 			    (match_operand:SI 2 "const248_operand" "n"))
 		   (match_operand:SI 3 "nonmemory_operand" "ri"))))]
   "TARGET_64BIT"
@@ -4946,7 +4946,7 @@
 
 (define_insn_and_split "*lea_general_3"
   [(set (match_operand 0 "register_operand" "=r")
-	(plus (plus (mult (match_operand 1 "register_operand" "r")
+	(plus (plus (mult (match_operand 1 "index_register_operand" "r")
 			  (match_operand 2 "const248_operand" "i"))
 		    (match_operand 3 "register_operand" "r"))
 	      (match_operand 4 "immediate_operand" "i")))]
@@ -4980,7 +4980,7 @@
 (define_insn_and_split "*lea_general_3_zext"
   [(set (match_operand:DI 0 "register_operand" "=r")
 	(zero_extend:DI
-	  (plus:SI (plus:SI (mult:SI (match_operand:SI 1 "register_operand" "r")
+	  (plus:SI (plus:SI (mult:SI (match_operand:SI 1 "index_register_operand" "r")
 				     (match_operand:SI 2 "const248_operand" "n"))
 			    (match_operand:SI 3 "register_operand" "r"))
 		   (match_operand:SI 4 "immediate_operand" "i"))))]
@@ -10615,7 +10615,7 @@
 ;; Convert lea to the lea pattern to avoid flags dependency.
 (define_split
   [(set (match_operand 0 "register_operand" "")
-	(ashift (match_operand 1 "register_operand" "")
+	(ashift (match_operand 1 "index_register_operand" "")
                 (match_operand:QI 2 "const_int_operand" "")))
    (clobber (reg:CC 17))]
   "reload_completed
@@ -10630,6 +10630,26 @@
   if (Pmode != SImode)
     pat = gen_rtx_SUBREG (SImode, pat, 0);
   emit_insn (gen_rtx_SET (VOIDmode, operands[0], pat));
+  DONE;
+})
+
+;; Rare case of shifting RSP is handled by generating move and shift
+(define_split
+  [(set (match_operand 0 "register_operand" "")
+	(ashift (match_operand 1 "register_operand" "")
+                (match_operand:QI 2 "const_int_operand" "")))
+   (clobber (reg:CC 17))]
+  "reload_completed
+   && true_regnum (operands[0]) != true_regnum (operands[1])"
+  [(const_int 0)]
+{
+  rtx pat, clob;
+  emit_move_insn (operands[1], operands[0]);
+  pat = gen_rtx_SET (VOIDmode, operands[0],
+		     gen_rtx_ASHIFT (GET_MODE (operands[0]),
+				     operands[0], operands[2]));
+  clob = gen_rtx_CLOBBER (VOIDmode, gen_rtx_REG (CCmode, FLAGS_REG));
+  emit_insn (gen_rtx_PARALLEL (VOIDmode, gen_rtvec (2, pat, clob)));
   DONE;
 })
 
