--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-09  Ranjit Mathew  <rmathew@hotmail.com>
+
+	* parse.y (DIR_SEPARATOR): Don't define.
+	(check_class_interface_creation): Use IS_DIR_SEPARATOR.
+
 2002-08-28  Andrew Haley  <aph@redhat.com>
 
 	* verify.c (verify_jvm_instructions): Allow exception handler
