* config/avr/avr.md (movstrhi, clrstrhi): Use gen_int_mode for 	right conversion of operands[1].
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56975 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-09  Denis Chertykov  <denisc@overta.ru>
+
+	* config/avr/avr.md (movstrhi, clrstrhi): Use gen_int_mode for
+	right conversion of operands[1].
+
 2002-09-09  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* config/s390/s390.md ("*tmdi_reg", "*tmsi_reg"): Do not mark as
