--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-09  Janis Johnson  <janis187@us.ibm.com>
+
+	* doc/extend.texi (Statement Exprs): Fix broken link.
+
 2002-09-09  Denis Chertykov  <denisc@overta.ru>
 
 	* config/avr/avr.md (movstrhi, clrstrhi): Use gen_int_mode for
