--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-09  David Edelsohn  <edelsohn@gnu.org>
+
+	* doc/tm.texi (TARGET_HAVE_SRODATA_SECTION): New description.
+	(TARGET_HAVE_TLS): New description.
+
 2002-09-09  Janis Johnson  <janis187@us.ibm.com>
 
 	* doc/extend.texi (Statement Exprs): Fix broken link.
