--- a/fastjar/ChangeLog
+++ b/fastjar/ChangeLog
@@ -1,3 +1,12 @@
+2002-09-09  Tom Tromey  <tromey@redhat.com>
+
+	* jartool.c (mkdir): Define.
+	* config.h.in: Rebuilt.
+	* aclocal.m4, configure: Rebuilt.
+	* acinclude.m4: New file.  Copied gcc_AC_COMPILE_CHECK_SIZEOF,
+	gcc_AC_EXAMINE_OBJECT, and fastjar_AC_COMPILE_C_BIGENDIAN from
+	aclocal.m4.
+
 2002-09-04  Tom Tromey  <tromey@redhat.com>
 
 	From greenrd@hotmail.com:
