--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,16 @@
+2002-09-09  Steve Ellcey  <sje@cup.hp.com>
+
+	* config/ia64/hpux.h (TARGET_HPUX_LD): New, define true.
+	(ASM_FILE_END) New.
+	* config/ia64/ia64.h (TARGET_HPUX_LD): New, define false.
+	* config/ia64/ia64-protos.h (ia64_hpux_asm_file_end): New.
+	* config/ia64/ia64.c (ia64_asm_output_external): Create list
+	of external functions if TARGET_HPUX_LD is true.
+	(ia64_hpux_add_extern_decl): New, routine to put names on
+	list of external functions.
+	(ia64_hpux_asm_file_end): Put out declarations for external
+	functions if and only if they are used.
+
 2002-09-09  John David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* pa.md (exception_receiver, builtin_setjmp_receiver): Add blockage
